--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   url_launcher: ^6.2.6
   jelly_anim: ^0.0.7
+  flip_card: ^0.7.0
 
 
 dev_dependencies:
