--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   url_launcher: ^6.2.6
   jelly_anim: ^0.0.7
   flip_card: ^0.7.0
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
+  flutter_widget_from_html: ^0.15.0
 
 
 dev_dependencies:
@@ -70,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/project_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
