--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
   flutter_widget_from_html: ^0.15.0
+  timelines_plus: ^1.0.2
 
 
 dev_dependencies:
