--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: abdulrehman
-description: "mr.abdulrehman.ar@gmail.com porfolio build in flutter"
+name: jibrantalib
+description: "jibrantalib2121@gmail.com porfolio build in flutter"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
